Fix arcade alignment for landscape orientation

--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,6 @@ section {
 
 @media only screen and (max-width: 75em) {
   #arcadeSVG {
-    position: absolute;
     height: 85%;
     width: auto;
     bottom: 0;
@@ -84,7 +83,6 @@ section {
 
 @media only screen and (max-width: 64em) {
   #arcadeSVG {
-    position: absolute;
     height: 85%;
     width: auto;
     bottom: 0;
@@ -94,11 +92,16 @@ section {
 
 @media only screen and (max-width: 48em) {
   #arcadeSVG {
-    position: absolute;
     height: 80%;
     width: auto;
     bottom: 0;
     margin-bottom: 15%;
+  }
+}
+
+@media only screen and (max-width: 48em) and (orientation: landscape) {
+  #arcadeSVG {
+    margin-bottom: 5%;
   }
 }
 
